--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <script src="https://unpkg.com/@tonejs/midi"></script>
   <script type="text/javascript" src="https://unpkg.com/tone@13.4.9/build/Tone.js"></script>
-  <h1>MIDI to M300 Converter</h1>
+  <h1>MIDI to C# Converter</h1>
   <div>
     <input type="file" id="filereader" />
     <div id="trackInfo"></div>
